<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">DS</string>
    <string name="app_name_en">DecipherStranger</string>
    <string name="app_name_ch">解密陌生人</string>
    <string name="login">登 录</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="auto_save_password">记住密码</string>
    <string name="register_text">注册新账号</string>
    <string name="back">返回</string>
    <string name="register_title">注  册</string>
    <string name="account_input">请输入用户名</string>
    <string name="password_input">请输入密码</string>
    <string name="re_password_input">请再次输入密码</string>
    <string name="username_input">请输入昵称</string>
    <string name="email_input">请输入邮箱</string>
    <string name="phone_input">请输入手机号</string>
    <string name="birth_input">请输入出生年月</string>
    <string name="addresses_input">请输入地址</string>
    <string name="sex_input">请选择性别</string>
    <string name="next_step">下一步</string>
    <string name="previous_step">上一步</string>
    <string name="upload_picture">上传照片</string>
    <string name="sex_prompt">请选择您的性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="confirm">确&#160;定</string>
    <string name="cancel">取&#160;消</string>
    <string name="user_name_display">呢称：</string>
    <string name="sex_display">性别</string>
    <string name="add_friend">添加好友</string>
    <string name="nearby_info_back">返  回</string>

    <string name="friends_trends">动态</string>
    <string name="friends_invitation">邀请券</string>
    <string name="friends_near">附近的人</string>
    <string name="friends_map">陌生人地图</string>
    <string name="game">游戏</string>
    
    <string name="portrait">头像</string>
    <string name="name">昵称</string>
    <string name="updateName">更改昵称</string>
    <string name="nameTip">好的昵称可以让你的朋友更容易记住你</string>
    <string name="account_lab">解密账号</string>
    <string name="sex">性别</string>
    <string name="sound">声音</string>
    <string name="main_quit">退&#160;&#160;&#160;&#160;出</string>
    
    <string name="shake">摇一摇</string>
    <string name="shakeSettings">摇一摇设置</string>
    <string name="shakeFriends">摇到的历史</string>
    <string name="clean">清&#160;&#160;空</string>
    <string name="defaultImage">使用默认的背景图片</string>
    <string name="setImage">自定义背景图片</string>
    <string name="music_effect">音效</string>
    <string name="shake_effect">震动</string>

    <string name="game_rsp">石头剪刀布</string>
    <string name="game_number">猜数字</string>
    <string name="grade_settings">难度设置</string>
    <string name="save">保存</string>    
    <string name="effectMusic">游戏音效</string>
    <string name="backgroundMusic">背景音乐</string>
    <string name="setting">设&#160;&#160;置</string>
    <string name="Help_Text">帮&#160;&#160;助</string>
    <string name="Quit_Text">退&#160;&#160;出</string>
    
    <string name="drop_down_refresh">下拉可以刷新!</string>
    <string name="loosen_refresh">松开可以刷新!</string>
    <string name="is_refreshing">正在刷新...</string>
    <string name="title_activity_test_upload_image">TestUploadImage</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="new_friend">新的好友</string>

    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
    <string name="str_recorder_cancel_send">手指上滑，取消发送</string>
</resources>
