<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:text="@string/sex_prompt"
            android:visibility="visible"
            android:background="@color/blue"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:weightSum="1">

                <Button
                    android:layout_width="226dp"
                    android:layout_height="50dp"
                    android:text="@string/man"
                    android:textColor="@color/blue"
                    android:background="@color/white"
                    android:id="@+id/register_sex_man"
                    android:singleLine="false"
                    android:textSize="@dimen/abc_text_size_large_material" />

            </LinearLayout>

        </LinearLayout>

        <view
            android:layout_width="fill_parent"
            android:layout_height="2px"
            class="android.support.v7.widget.LinearLayoutCompat"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="50dp"
            android:weightSum="1">

            <Button
                android:layout_width="226dp"
                android:layout_height="50dp"
                android:text="@string/woman"
                android:textColor="@color/red"
                android:background="@color/white"
                android:id="@+id/register_sex_woman"
                android:textSize="@dimen/abc_text_size_large_material"
                android:gravity="center" />
        </LinearLayout>

        <view
            android:layout_width="fill_parent"
            android:layout_height="2px"
            class="android.support.v7.widget.LinearLayoutCompat"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:background="@color/white_grey"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/negativeButton"
                style="@style/text_15_666666_sdw"
                android:layout_width="114.0dip"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/cancel"
                android:layout_weight="0.43" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>