<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/register_back_button"
        android:src="@drawable/back_btn"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_register_bg"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_back_button"
        android:layout_above="@+id/next_step_btn"
        android:id="@+id/linearLayout3">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="1dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:id="@+id/register_account_input"
            android:background="@null"
            android:hint="@string/account_input"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"/>

        <view
            android:layout_width="fill_parent"
            android:layout_height="2px"
            class="android.support.v7.widget.LinearLayoutCompat"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_line" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="1dp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:id="@+id/register_password_input"
            android:background="@null"
            android:hint="@string/password_input"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_gravity="center_horizontal" />

        <view
            android:layout_width="fill_parent"
            android:layout_height="2px"
            class="android.support.v7.widget.LinearLayoutCompat"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_line" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="1dp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:id="@+id/register_re_paw_input"
            android:background="@null"
            android:hint="@string/re_password_input"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_gravity="center_horizontal" />

        <view
            android:layout_width="fill_parent"
            android:layout_height="2px"
            class="android.support.v7.widget.LinearLayoutCompat"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_line" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="1dp"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:id="@+id/register_username_input"
            android:background="@null"
            android:hint="@string/username_input"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_gravity="center_horizontal" />

        <view
            android:layout_width="fill_parent"
            android:layout_height="2px"
            class="android.support.v7.widget.LinearLayoutCompat"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="1dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/register_sex_input"
                android:background="@null"
                android:gravity ="center_vertical"
                android:text="@string/sex_input"
                android:paddingLeft="12dp"
                android:textColor="@color/grey"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:enabled="false"
                android:background="@null"
                android:id="@+id/register_sex_icon" />

        </LinearLayout>

        <view
            android:layout_width="fill_parent"
            android:layout_height="2px"
            class="android.support.v7.widget.LinearLayoutCompat"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_line" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="1dp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:id="@+id/register_email_input"
            android:background="@null"
            android:hint="@string/email_input"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_gravity="center_horizontal" />

        <view
            android:layout_width="fill_parent"
            android:layout_height="2px"
            class="android.support.v7.widget.LinearLayoutCompat"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_line" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="1dp"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:id="@+id/register_phone_input"
            android:background="@null"
            android:hint="@string/phone_input"
            android:maxLength="15"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_gravity="center_horizontal" />

        <view
            android:layout_width="fill_parent"
            android:layout_height="2px"
            class="android.support.v7.widget.LinearLayoutCompat"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="1dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/register_birth_input"
                android:background="@null"
                android:gravity ="center_vertical"
                android:text="@string/birth_input"
                android:paddingLeft="12dp"
                android:textColor="@color/grey"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:enabled="false"
                android:background="@null"
                android:id="@+id/register_birth_icon" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_step_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_register_button_bg"
        android:text="@string/next_step"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>