<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tab"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updateName_back_button"
            android:onClick="UpdateNameOnClick"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:src="@drawable/home_btn"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/updateName"
            android:textColor="@color/text_hint"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:id="@+id/shake_title"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/save"
            android:id="@+id/save_btn"
            android:textSize="16dp"
            android:textColor="@color/text_checked"
            android:onClick="UpdateNameOnClick"
            android:background="@drawable/small_btn_bg"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_normal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="20"
            android:maxLines="1"
            android:id="@+id/nameText"
            android:layout_margin="20dp"
            android:textColor="@color/text_checked"
            android:background="@drawable/input_bar_bg"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameTip"
            android:textSize="16dp"
            android:textColor="@color/text_hint"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</LinearLayout>